# Multiphase_LBM

./: .gitignore  CMakeLists.txt  D2Q9.py  cang_ani_generator.py  cangle_graph.py  contact_angle.py  main.py  pdiff.npy  rad.npy  spindecomp_ani_generator.py  spinodal_decomp.py  test.py
cmake/: thrust.cmake
headers/: computehelp.cuh  cudahelp.cuh  lbmgrid.cuh  vtkhelper.hpp
impl/: CMakeLists.txt
impl/testsimu/: CMakeLists.txt  main.cu
